Added the layout for the app

--- a/index.html
+++ b/index.html
@@ -8,6 +8,13 @@
     <title>Document</title>
 </head>
 <body>
+    <div class="parent">
+    <h1>To-Do List</h1>
+  <input type="text" id="titleInput" placeholder=" title" required>
+  <input type="text" id="authorInput" placeholder=" author" required>
+  <button class="add">Add</button>
+  <ul id="bookList"></ul>
+    </div>
     <script src="javascript.js"></script>
 </body>
 </html>
