--- a/index.html
+++ b/index.html
@@ -8,13 +8,13 @@
     <title>Document</title>
 </head>
 <body>
-    <div class="parent">
-    <h1>To-Do List</h1>
-  <input type="text" id="titleInput" placeholder=" title" required>
-  <input type="text" id="authorInput" placeholder=" author" required>
-  <button class="add">Add</button>
-  <ul id="bookList"></ul>
-    </div>
+    <main class="parent">
+            <h1>Awesome books</h1>
+            <ul id="bookList" class="bookListStyle"></ul>
+            <input type="text" id="titleInput" placeholder=" Title" required class="bookListInput-1">
+            <input type="text" id="authorInput" placeholder=" Author" required class="bookListInput-2">
+            <button class="add">Add</button>
+    </main>
     <script src="javascript.js"></script>
 </body>
 </html>
