--- a/index.html
+++ b/index.html
@@ -11,8 +11,8 @@
     <main class="parent">
             <h1>Awesome books</h1>
             <ul id="bookList" class="bookListStyle"></ul>
-            <input type="text" id="titleInput" placeholder=" Title" required class="bookListInput-1">
-            <input type="text" id="authorInput" placeholder=" Author" required class="bookListInput-2">
+            <input type="text" id="titleInput" placeholder=" Title" required>
+            <input type="text" id="authorInput" placeholder=" Author" required>
             <button class="add">Add</button>
     </main>
     <script src="javascript.js"></script>
