--- a/index.html
+++ b/index.html
@@ -10,10 +10,15 @@
 <body>
     <main class="parent">
             <h1>Awesome books</h1>
+            <div class="list-container">
             <ul id="bookList" class="bookListStyle"></ul>
+            </div>
+            <div class="input-container">
             <input type="text" id="titleInput" placeholder=" Title" required>
             <input type="text" id="authorInput" placeholder=" Author" required>
+            
             <button class="add">Add</button>
+        </div>
     </main>
     <script src="javascript.js"></script>
 </body>
