Fixed some problms in the Css

--- a/index.html
+++ b/index.html
@@ -10,13 +10,10 @@
 <body>
     <main class="parent">
             <h1>Awesome books</h1>
-            <div class="list-container">
-            <ul id="bookList" class="bookListStyle"></ul>
-            </div>
+            <ul id="bookList"></ul>
             <input type="text" id="titleInput" placeholder=" Title" required>
             <input type="text" id="authorInput" placeholder=" Author" required>
             <button class="add">Add</button>
-        
     </main>
     <script src="javascript.js"></script>
 </body>
