Added classes&elements on js; added style for Medium-fid UI

--- a/index.html
+++ b/index.html
@@ -11,6 +11,8 @@
     <main class="parent">
             <h1>Awesome books</h1>
             <ul id="bookList"></ul>
+            <hr>
+            <h3>Add a new book</h3>
             <input type="text" id="titleInput" placeholder=" Title" required>
             <input type="text" id="authorInput" placeholder=" Author" required>
             <button class="add">Add</button>
