--- a/index.html
+++ b/index.html
@@ -8,15 +8,35 @@
     <title>Document</title>
 </head>
 <body>
+     <header>
+    <nav class="nav">
+        <h4>Awsame Books</h4>
+      <ul id="nav">
+        <li><a href="#books" id="books-nav">Books</a></li>
+        <li><a href="#add-book" id="new-book">Add New</a></li>
+        <li><a href="#contact" id="nav-contact">Contact</a></li>
+      </ul>
+    </nav>
+  </header>
+
     <main class="parent">
+        <div class="bookslist">
             <h1>Awesome books</h1>
             <ul id="bookList"></ul>
-            <hr>
+        </div>
+        <div class="main-page">
             <h3>Add a new book</h3>
             <input type="text" id="titleInput" placeholder=" Title" required>
             <input type="text" id="authorInput" placeholder=" Author" required>
             <button class="add">Add</button>
+        </div>
     </main>
+        <section id="contact">
+            <h2>Contact Info</h2>
+            <p>Do you have any bla bla bla</p>
+            <p>Email: example@example.com</p>
+        </section>
+        <p class="copy-right">Copy Rights reserved to <br> Mohammed and Nico </p>
     <script src="javascript.js"></script>
 </body>
 </html>
