Added some info for better UI to the user

--- a/index.html
+++ b/index.html
@@ -26,6 +26,7 @@
         </div>
         <div class="main-page">
             <h3>Add a new book</h3>
+            <h6>to see the books you just created please click on Books</h6>
             <input type="text" id="titleInput" placeholder=" Title" required>
             <input type="text" id="authorInput" placeholder=" Author" required>
             <button class="add">Add</button>
